--- a/dist.ini
+++ b/dist.ini
@@ -7,4 +7,4 @@ lib_dir = lib
 doc_dir = lib
 repo_link = https://github.com/fffonion/lua-resty-worker-events
 main_module = lib/resty/worker/events.lua
-exclude_files=*.rock, *.rockspec,rockspecs
+exclude_files= *.rockspec, rockspecs
